# ikm-fraud-finetuning

./: .gitignore  .gitmodules  README.md  REPORT.md  pyproject.toml
_notebooks/: finetuning.ipynb
src/ikm_fraud_finetuning/: __init__.py
src/ikm_fraud_finetuning/core/: paths.py
