[project]
name = "ikm-fraud-finetuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Richard Hajek", email = "richard.m.hajek@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "ipywidgets>=8.1.7",
    "joblib>=1.4.2",
    "jupyter>=1.1.1",
    "jupyterlab>=4.3.7",
    "kagglehub>=0.2.9",
    "lightgbm[scikit-learn]>=4.6.0",
    "loky>=3.4.1",
    "notebook>=7.3.3",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "scikit-learn>=1.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
